--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,16 @@
   "description": "Frontend for Nuit de l'Info Gamification Tool",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
-    "uuid": "^9.0.1"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "cross-env PORT=4000 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env PORT=4000 craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.32",
